<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.SplashActivity">

    <LinearLayout
        android:id="@+id/center_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_title"
            android:textColor="@color/colorAccent"
            android:textSize="28pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_text"
            android:textColor="@color/colorAccent"
            android:textSize="10pt" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/load_progress"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_below="@id/center_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41.3dp" />

    <TextView
        android:id="@+id/load_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/load_progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42.5dp"
        android:text="@string/load_text"
        android:textColor="@color/colorAccent"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/load_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/team_name"
        android:textColor="@color/colorAccent"
        android:textSize="10pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/team_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/member_name"
        android:textColor="@color/colorAccent"
        android:textSize="6.5pt" />
</RelativeLayout>